--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -130,7 +130,7 @@
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
         "  else:\n",
         "    return -log(1 - p)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
         "  return np.max(0, 1 - yHat * y)\n",
         "  "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
         "def MAE(yH, y):\n",
         "  return np.sum(np.absolute(yH - y)) / y.size"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,7 +241,7 @@
         "def MSE(yH, y):\n",
         "  return np.sum((yH - y)**2) / y.size"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,11 +279,11 @@
       "metadata": {
         "id": "zPMR3ksRRgUT",
         "colab_type": "code",
-        "outputId": "d31ad3a0-1519-4e78-8d80-6d29746752f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "d31ad3a0-1519-4e78-8d80-6d29746752f6"
       },
       "source": [
         "# load libraries\n",
@@ -301,7 +301,7 @@
         "features_standardized = scalar.fit_transform(features)\n",
         "features.shape"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,7 +339,7 @@
         "polynomial = PolynomialFeatures(degree = 3, include_bias = False)\n",
         "features_polynomial = polynomial.fit_transform(features)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,7 +370,7 @@
         "print(model.intercept_)\n",
         "print(model.coef_)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -388,11 +388,11 @@
       "metadata": {
         "id": "bZUeihkpTVVa",
         "colab_type": "code",
-        "outputId": "a15c4562-04cf-4345-851e-9448b4b219eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        }
+        },
+        "outputId": "a15c4562-04cf-4345-851e-9448b4b219eb"
       },
       "source": [
         "# create ridge regression, with cross validation\n",
@@ -405,7 +405,7 @@
         "print(ridgemodel.intercept_)\n",
         "print(ridgemodel.coef_)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,11 +442,11 @@
       "metadata": {
         "id": "7-tEy6hdVede",
         "colab_type": "code",
-        "outputId": "0530986b-cdfc-4b2e-b6e0-3fcfdace126f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        }
+        },
+        "outputId": "0530986b-cdfc-4b2e-b6e0-3fcfdace126f"
       },
       "source": [
         "# create lasso regression, with cross validation\n",
@@ -459,7 +459,7 @@
         "print(lassomodel.intercept_)\n",
         "print(lassomodel.coef_)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,6 +597,117 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "L3a-iNQnrFpT",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Two-layer Neural Network"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jdgOGhkirHRA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def two_layer_model(X, Y, layers_dims, learning_rate = 0.0075, num_iterations = 3000, print_cost=False):\n",
+        "    \"\"\"\n",
+        "    Implements a two-layer neural network: LINEAR->RELU->LINEAR->SIGMOID.\n",
+        "    \n",
+        "    Arguments:\n",
+        "    X -- input data, of shape (n_x, number of examples)\n",
+        "    Y -- true \"label\" vector (containing 1 if cat, 0 if non-cat), of shape (1, number of examples)\n",
+        "    layers_dims -- dimensions of the layers (n_x, n_h, n_y)\n",
+        "    num_iterations -- number of iterations of the optimization loop\n",
+        "    learning_rate -- learning rate of the gradient descent update rule\n",
+        "    print_cost -- If set to True, this will print the cost every 100 iterations \n",
+        "    \n",
+        "    Returns:\n",
+        "    parameters -- a dictionary containing W1, W2, b1, and b2\n",
+        "    \"\"\"\n",
+        "    \n",
+        "    np.random.seed(1)\n",
+        "    grads = {}\n",
+        "    costs = []                              # to keep track of the cost\n",
+        "    m = X.shape[1]                           # number of examples\n",
+        "    (n_x, n_h, n_y) = layers_dims\n",
+        "    \n",
+        "    # Initialize parameters dictionary, by calling one of the functions you'd previously implemented\n",
+        "    ### START CODE HERE ### (≈ 1 line of code)\n",
+        "    parameters = initialize_parameters(n_x, n_h, n_y)\n",
+        "    ### END CODE HERE ###\n",
+        "    \n",
+        "    # Get W1, b1, W2 and b2 from the dictionary parameters.\n",
+        "    W1 = parameters[\"W1\"]\n",
+        "    b1 = parameters[\"b1\"]\n",
+        "    W2 = parameters[\"W2\"]\n",
+        "    b2 = parameters[\"b2\"]\n",
+        "    \n",
+        "    # Loop (gradient descent)\n",
+        "\n",
+        "    for i in range(0, num_iterations):\n",
+        "\n",
+        "        # Forward propagation: LINEAR -> RELU -> LINEAR -> SIGMOID. Inputs: \"X, W1, b1, W2, b2\". Output: \"A1, cache1, A2, cache2\".\n",
+        "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+        "        A1, cache1 = linear_activation_forward(X, W1, b1, activation = \"relu\")\n",
+        "        A2, cache2 = linear_activation_forward(A1, W2, b2, activation = \"sigmoid\")\n",
+        "        ### END CODE HERE ###\n",
+        "        \n",
+        "        # Compute cost\n",
+        "        ### START CODE HERE ### (≈ 1 line of code)\n",
+        "        cost = compute_cost(A2, Y)\n",
+        "        ### END CODE HERE ###\n",
+        "        \n",
+        "        # Initializing backward propagation\n",
+        "        dA2 = - (np.divide(Y, A2) - np.divide(1 - Y, 1 - A2))\n",
+        "        \n",
+        "        # Backward propagation. Inputs: \"dA2, cache2, cache1\". Outputs: \"dA1, dW2, db2; also dA0 (not used), dW1, db1\".\n",
+        "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+        "        dA1, dW2, db2 = linear_activation_backward(dA2, cache2, activation = \"sigmoid\")\n",
+        "        dA0, dW1, db1 = linear_activation_backward(dA1, cache1, activation = \"relu\")\n",
+        "        ### END CODE HERE ###\n",
+        "        \n",
+        "        # Set grads['dWl'] to dW1, grads['db1'] to db1, grads['dW2'] to dW2, grads['db2'] to db2\n",
+        "        grads['dW1'] = dW1\n",
+        "        grads['db1'] = db1\n",
+        "        grads['dW2'] = dW2\n",
+        "        grads['db2'] = db2\n",
+        "        \n",
+        "        # Update parameters.\n",
+        "        ### START CODE HERE ### (approx. 1 line of code)\n",
+        "        parameters = update_parameters(parameters, grads, learning_rate)\n",
+        "        ### END CODE HERE ###\n",
+        "\n",
+        "        # Retrieve W1, b1, W2, b2 from parameters\n",
+        "        W1 = parameters[\"W1\"]\n",
+        "        b1 = parameters[\"b1\"]\n",
+        "        W2 = parameters[\"W2\"]\n",
+        "        b2 = parameters[\"b2\"]\n",
+        "        \n",
+        "        # Print the cost every 100 training example\n",
+        "        if print_cost and i % 100 == 0:\n",
+        "            print(\"Cost after iteration {}: {}\".format(i, np.squeeze(cost)))\n",
+        "        if print_cost and i % 100 == 0:\n",
+        "            costs.append(cost)\n",
+        "       \n",
+        "    # plot the cost\n",
+        "\n",
+        "    plt.plot(np.squeeze(costs))\n",
+        "    plt.ylabel('cost')\n",
+        "    plt.xlabel('iterations (per hundreds)')\n",
+        "    plt.title(\"Learning rate =\" + str(learning_rate))\n",
+        "    plt.show()\n",
+        "    \n",
+        "    return parameters"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "a4iX2v_FWELb",
         "colab_type": "text"
       },
@@ -614,7 +725,7 @@
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -671,7 +782,7 @@
         "tf.enable_eager_execution()\n",
         "print(\"Tensorflow version: \" + tf.__version__)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -772,7 +883,7 @@
         "          [rmse1, rmse2, rmse3, rmse4, rmse5, rmse6, rmse7, rmse8], color=colors)\n",
         "  plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -798,7 +909,7 @@
         "picture_this_1(data, DATA_SEQ_LEN)\n",
         "DATA_LEN = DATA_SEQ_LEN * 4 # since we concatenated 4 sequences"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -824,7 +935,7 @@
         "BATCHSIZE = 32      # mini-batch size\n",
         "LAST_N = SEQLEN//2  # loss computed on last N element of sequence in advanced RNN model"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -847,7 +958,7 @@
       "source": [
         "picture_this_2(data, BATCHSIZE, SEQLEN) # execute multiple times to see different sample sequences"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -943,7 +1054,7 @@
         "    \n",
         "]"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -959,11 +1070,308 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "lw0rFkuUDGNT",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Types of CV Problems**\n",
+        "\n",
+        "- Image Classifcation\n",
+        "- Object Detection\n",
+        "- Neural Style Transfer\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5Ineuf_hDdOV",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Edge Detection**\n",
+        "\n",
+        "Edges are detected using Filters (or Kernels)\n",
+        "- In Tensorflow: tf.nn.conv2d\n",
+        "- In Keras: Cond2D"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HAISj84XEMF0",
+        "colab_type": "text"
+      },
+      "source": [
+        "Horizontal Edge Detection (3x3 filter)\n",
+        "\n",
+        "|  1,  1,  1 | <br/>\n",
+        "|  0,  0,  0 | <br/>\n",
+        "| -1, -1, -1 |"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dfsYm49XEOLG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Vertical Edge Detection (3x3 filter)\n",
+        "\n",
+        "| 1, 0, -1 | <br/>\n",
+        "| 1, 0, -1 | <br/>\n",
+        "| 1, 0, -1 |"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y-WVHzxZE2Qi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Sobol Filter (3x3)\n",
+        "- More robust (vertical) detector with higher weight in the center\n",
+        "\n",
+        "| 1, 0, -1 | <br/>\n",
+        "| 2, 0, -2 | <br/>\n",
+        "| 1, 0, -1 |"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uxokzfBsFSn4",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Padding**\n",
+        "\n",
+        "Padding is used to ensure the input array size matches the output (so as not to lose the edge pixels)\n",
+        "\n",
+        "Two Types of Convolution:\n",
+        "- Valid: no filter (nxn * fxf -> [n - f + 1] x [n - f + 1])\n",
+        "- Same: pad so output size is the same as input (padding p = (f - 1) / 2\n",
+        "\n",
+        "*Note: f is usually odd (1x1, 3x3, 5x5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nSgFfaRCGUUJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Strided Convolution**\n",
+        "\n",
+        "Stride is the # of steps (pixels) to move over at each filter iteration (vertically and horizontally)\n",
+        "\n",
+        " (nxn * fxf, stride s = 2  -> [(n + 2p - f)/s + 1] x [(n + 2p - f)/s + 1] )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "20pJrd_hHw9R",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Convolution on RGB images**\n",
+        "\n",
+        "Your input may look like 6 x 6 x 3 (height x width x color channels)\n",
+        "\n",
+        "Your convolution (filter) may then be a 3 x 3 x 3"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YJHGuTNnJufn",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Pooling Layers**\n",
+        "\n",
+        "Pooling will abstract or summarise your input (bring down to lower resolution)\n",
+        "\n",
+        "Types of Pooling:\n",
+        "- Max Pooling\n",
+        "- Average Pooling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ztZz4d9tR4cf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vPuaWnOeK6HB",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Why use Convolution?**\n",
+        "\n",
+        "- **Parameter sharing**: A feature detector (such as vertical edge detector) that's useful in one part of the iomage is probably useful in another part of the image\n",
+        "- **Sparsity of connections**: In each layer, each output value depends only on a small number of inputs"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wg_tdgwaRPwP",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **\\# of Parameters and Shape**\n",
+        "\n",
+        "- Conv Layer:\n",
+        "  - \\# Parameters: ([ width m ] x [ height n ] x [prev layer's filters d] + bias 1) * [k filters in current layer)\n",
+        "  - Shape: [(n + 2 \\* padding - filters)/stride + 1] x [(n + 2 \\* padding - filters)/stride + 1] x ? )\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UkjR00-KVDhL",
+        "colab_type": "text"
+      },
+      "source": [
+        "| Type | Dimensions |\n",
+        "|--|--|\n",
+        "| Input | nh[L-1] x nw[L-1] x nc[L-1]|\n",
+        "| Activation a[l] | nh[L] x nw[L] x nc[L] |\n",
+        "| Weights | f[L] x f[L] x nc[L-1] x nc[L]|\n",
+        "| Bias | nc[L]|\n",
+        "\n",
+        "Where\n",
+        "- f[L] = filter size\n",
+        "- p[L] = padding\n",
+        "- s]L] = stride\n",
+        "- nc[L] = number of filters\n",
+        "- nc[L-1] = color channels\n",
+        "\n",
+        "https://engmrk.com/convolutional-neural-network-3/\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "SgNbYk6r4oyT",
         "colab_type": "text"
       },
       "source": [
-        "### Architecture"
+        "### **Classic Architectures**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yZhgSXoJoOB3",
+        "colab_type": "text"
+      },
+      "source": [
+        "**LeNet-5 (1998)**\n",
+        "\n",
+        "1. Convolution 6 [5x5] (s = 1)\n",
+        "2. Avg Pooling (f = 2, s = 2)\n",
+        "3. Convolution 16 [5x5] (s = 1)\n",
+        "4. Avg Pooling (f = 2, s = 2)\n",
+        "5. Dense Layer (120 nodes)\n",
+        "6. Dense Layer (84 nodes)\n",
+        "7. Softmax (10-way)\n",
+        "\n",
+        "~60K parameters\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "chRLnXbao8Up",
+        "colab_type": "text"
+      },
+      "source": [
+        "**AlexNet (2012)**\n",
+        "\n",
+        "0. Start: 227x227x3\n",
+        "1. Convolution 96 [11x11] (s = 4)\n",
+        "2. Max Pooling (f = 3, s = 2)\n",
+        "3. Convolution 256 [5x5] (same)\n",
+        "3. Max Pooling (f = 3, s = 2)\n",
+        "5. Convolution 384 [3x3] (same)\n",
+        "6. Convolution 384 [3x3] (same)\n",
+        "7. Convolution 256 [3x3] (same)\n",
+        "8. Max Pooling (f = 3, s = 2)\n",
+        "9. Dense (4096)\n",
+        "10. Dense (4096)\n",
+        "11. Softmax (1000)\n",
+        "\n",
+        "~60M parameters"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bNANLopZccs-",
+        "colab_type": "text"
+      },
+      "source": [
+        "**VGG-16 (2015)**\n",
+        "\n",
+        "Key Features:\n",
+        "- Conv = [3x3] (s = 1, same padding)\n",
+        "- All Max Pooling [2x2] w/ stride = 2\n",
+        "\n",
+        "0. Start: 224x224x3\n",
+        "1. Convolution 64x2 (2 times) [2x2] (same)\n",
+        "2. Max Pooling (f = 2, s = 2)\n",
+        "3. Convolution 128x2 (s = 1, same)\n",
+        "4. Max Pooling (f = 2, s = 2)\n",
+        "5. Convolution 256x3 (s = 1, same)\n",
+        "6. Max Pooling (f = 2, s = 2)\n",
+        "7. Convolution 512x3 (s = 1, same)\n",
+        "8. Max Pooling (f = 2, s = 2)\n",
+        "9. Convolution 512x3 (s = 1, same)\n",
+        "10. Max Pooling (f - 2, s = 2)\n",
+        "11. Dense (4096)\n",
+        "12. Dense (4096)\n",
+        "13. Softmax (1000)\n",
+        "\n",
+        "~138M parameters"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RhIaIgz_eKG_",
+        "colab_type": "text"
+      },
+      "source": [
+        "**ResNet (2015)**\n",
+        "\n",
+        "Key Features:\n",
+        "- Utilizes Skip Networks \n",
+        "- Utilizes Residuial block\n",
+        "- BY training w/ Residual Block, training error does NOT increase with more layers\n",
+        "\n",
+        "Residual Block\n",
+        "- Start w/ block A\n",
+        "- Linear Operator (z = WA + b)\n",
+        "- ReLu (A[L+1] = g(z))\n",
+        "- Linear Operator (z2 = WA[L+1] + b)\n",
+        "- ReLu w shortcut A (A[L+2] = g(z2 + A))"
       ]
     }
   ]
