--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -577,26 +577,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9w6Zb_FgcdbA",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Activation Functions"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "UivkBvXscfkZ",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Exploding Gradient"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "L3a-iNQnrFpT",
         "colab_type": "text"
       },
@@ -704,16 +684,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "a4iX2v_FWELb",
-        "colab_type": "text"
-      },
-      "source": [
-        "## TensorFlow and Keras"
-      ]
     },
     {
       "cell_type": "code",
@@ -1151,7 +1121,7 @@
         "\n",
         "Two Types of Convolution:\n",
         "- Valid: no filter (nxn * fxf -> [n - f + 1] x [n - f + 1])\n",
-        "- Same: pad so output size is the same as input (padding p = (f - 1) / 2\n",
+        "- Same: pad so output size is the same as input (padding p = (f - 1) / 2)\n",
         "\n",
         "*Note: f is usually odd (1x1, 3x3, 5x5)"
       ]
@@ -1199,19 +1169,6 @@
         "- Max Pooling\n",
         "- Average Pooling"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ztZz4d9tR4cf",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1361,17 +1318,370 @@
       "source": [
         "**ResNet (2015)**\n",
         "\n",
-        "Key Features:\n",
+        "**Key Features**:\n",
         "- Utilizes Skip Networks \n",
         "- Utilizes Residuial block\n",
         "- BY training w/ Residual Block, training error does NOT increase with more layers\n",
         "\n",
-        "Residual Block\n",
+        "**Residual Block**\n",
         "- Start w/ block A\n",
         "- Linear Operator (z = WA + b)\n",
         "- ReLu (A[L+1] = g(z))\n",
         "- Linear Operator (z2 = WA[L+1] + b)\n",
-        "- ReLu w shortcut A (A[L+2] = g(z2 + A))"
+        "- ReLu w shortcut A (A[L+2] = g(z2 + A))\n",
+        "\n",
+        "**Identity Block**\n",
+        "\n",
+        "A standard block, corresponds to the case where the input activation (a[L]) has the same dimension as the output activation (a[L+2 or L+3]) (skipping over 2 or 3 layers)\n",
+        "\n",
+        "- Start with A\n",
+        "- (1) Conv2D(F1, [1x1], valid padding)\n",
+        "- (1) Batch Norm\n",
+        "- (1) ReLu\n",
+        "- (2) Conv2D(F2, [1x1], valid padding)\n",
+        "- (2) Batch Norm\n",
+        "- (2) ReLu\n",
+        "- (3) Conv2D (F3, [1x1], valid padding\n",
+        "- (3) Batch Norm\n",
+        "- X_shortcut added to ^ output (Add()([var2,var2])\n",
+        "- ReLu\n",
+        "\n",
+        "**Convolution Block**\n",
+        "\n",
+        "Another block type - use when input and output dimensions don't match up. The difference is that convolution is applied to the shortcut"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PNnnYEefcHxr",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Example ResNet-50 Model**\n",
+        "\n",
+        "The details of this ResNet-50 model are:\n",
+        "\n",
+        "- Zero-padding pads the input with a pad of (3,3)\n",
+        "- Stage 1 (1 layer):\n",
+        "  - The 2D Convolution has 64 filters of shape (7,7) and uses a stride of (2,2). Its name is \"conv1\".\n",
+        "  - BatchNorm is applied to the 'channels' axis of the input.\n",
+        "  - MaxPooling uses a (3,3) window and a (2,2) stride.\n",
+        "- Stage 2 (9 layers (1x3 + 2x3)):\n",
+        "  - The convolutional block uses three sets of filters of size [64,64,256], \"f\" is 3, \"s\" is 1 and the block is \"a\".\n",
+        "  - The 2 identity blocks use three sets of filters of size [64,64,256], \"f\" is 3 and the blocks are \"b\" and \"c\".\n",
+        "- Stage 3 (12 layers (1x3 + 3x3)):\n",
+        "  - The convolutional block uses three sets of filters of size [128,128,512], \"f\" is 3, \"s\" is 2 and the block is \"a\".\n",
+        "  - The 3 identity blocks use three sets of filters of size [128,128,512], \"f\" is 3 and the blocks are \"b\", \"c\" and \"d\".\n",
+        "- Stage 4 (18 layers 1x3 + 5x3)):\n",
+        "  - The convolutional block uses three sets of filters of size [256, 256, 1024], \"f\" is 3, \"s\" is 2 and the block is \"a\".\n",
+        "  - The 5 identity blocks use three sets of filters of size [256, 256, 1024], \"f\" is 3 and the blocks are \"b\", \"c\", \"d\", \"e\" and \"f\".\n",
+        "- Stage 5 (10 layers (3x3 + 1)):\n",
+        "  - The convolutional block uses three sets of filters of size [512, 512, 2048], \"f\" is 3, \"s\" is 2 and the block is \"a\".\n",
+        "  - The 2 identity blocks use three sets of filters of size [512, 512, 2048], \"f\" is 3 and the blocks are \"b\" and \"c\".\n",
+        "  - The 2D Average Pooling uses a window of shape (2,2) and its name is \"avg_pool\".\n",
+        "  - The 'flatten' layer doesn't have any hyperparameters or name.\n",
+        "  - The Fully Connected (Dense) layer reduces its input to the number of classes using a softmax activation. Its name should be 'fc' + str(classes)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LR-Qrkmo5q8m",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def ResNet50(input_shape = (64, 64, 3), classes = 6):\n",
+        "    \"\"\"\n",
+        "    Implementation of the popular ResNet50 the following architecture:\n",
+        "    CONV2D -> BATCHNORM -> RELU -> MAXPOOL -> CONVBLOCK -> IDBLOCK*2 -> CONVBLOCK -> IDBLOCK*3\n",
+        "    -> CONVBLOCK -> IDBLOCK*5 -> CONVBLOCK -> IDBLOCK*2 -> AVGPOOL -> TOPLAYER\n",
+        "\n",
+        "    Arguments:\n",
+        "    input_shape -- shape of the images of the dataset\n",
+        "    classes -- integer, number of classes\n",
+        "\n",
+        "    Returns:\n",
+        "    model -- a Model() instance in Keras\n",
+        "    \"\"\"\n",
+        "    \n",
+        "    # Define the input as a tensor with shape input_shape\n",
+        "    X_input = Input(input_shape)\n",
+        "\n",
+        "    # Zero-Padding\n",
+        "    X = ZeroPadding2D((3, 3))(X_input)\n",
+        "    \n",
+        "    # Stage 1\n",
+        "    X = Conv2D(64, (7, 7), strides = (2, 2), name = 'conv1', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+        "    X = BatchNormalization(axis = 3, name = 'bn_conv1')(X)\n",
+        "    X = Activation('relu')(X)\n",
+        "    X = MaxPooling2D((3, 3), strides=(2, 2))(X)\n",
+        "\n",
+        "    # Stage 2\n",
+        "    X = convolutional_block(X, f = 3, filters = [64, 64, 256], stage = 2, block='a', s = 1)\n",
+        "    X = identity_block(X, 3, [64, 64, 256], stage=2, block='b')\n",
+        "    X = identity_block(X, 3, [64, 64, 256], stage=2, block='c')\n",
+        "\n",
+        "    # Stage 3\n",
+        "    X = convolutional_block(X, f = 3, filters = [128, 128, 512], stage = 3, block='a', s = 2)\n",
+        "    X = identity_block(X, 3, [128, 128, 512], stage=3, block='b')\n",
+        "    X = identity_block(X, 3, [128, 128, 512], stage=3, block='c')\n",
+        "    X = identity_block(X, 3, [128, 128, 512], stage=3, block='d')\n",
+        "\n",
+        "    # Stage 4\n",
+        "    X = convolutional_block(X, f = 3, filters = [256, 256, 1024], stage = 4, block='a', s = 2)\n",
+        "    X = identity_block(X, 3, [256, 256, 1024], stage=4, block='b')\n",
+        "    X = identity_block(X, 3, [256, 256, 1024], stage=4, block='c')\n",
+        "    X = identity_block(X, 3, [256, 256, 1024], stage=4, block='d')\n",
+        "    X = identity_block(X, 3, [256, 256, 1024], stage=4, block='e')\n",
+        "    X = identity_block(X, 3, [256, 256, 1024], stage=4, block='f')\n",
+        "\n",
+        "    # Stage 5\n",
+        "    X = convolutional_block(X, f = 3, filters = [512, 512, 2048], stage = 5, block='a', s = 2)\n",
+        "    X = identity_block(X, 3, [512, 512, 2048], stage=5, block='b')\n",
+        "    X = identity_block(X, 3, [512, 512, 2048], stage=5, block='c')\n",
+        "\n",
+        "    # AVGPOOL\n",
+        "    X = AveragePooling2D(pool_size=(2,2), name=\"avg_pool\")(X)\n",
+        "\n",
+        "    # output layer\n",
+        "    X = Flatten()(X)\n",
+        "    X = Dense(classes, activation='softmax', name='fc' + str(classes), kernel_initializer = glorot_uniform(seed=0))(X)\n",
+        "    \n",
+        "    # Create model\n",
+        "    model = Model(inputs = X_input, outputs = X, name='ResNet50')\n",
+        "\n",
+        "    return model"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RSnZgb2XxN-Q",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Inception Network (2014)**\n",
+        "\n",
+        "Inception Networks are used to apply different convolutions at an activation step, and concatenate all the outputs into one layer (channel concatenation)\n",
+        "\n",
+        "Motivation: significantly reduces # of parameters needed"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P_yL2QGAzuG3",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Data Augmentation**\n",
+        "\n",
+        "Motivation for Data Augmentation: Increase training data size\n",
+        "\n",
+        "Methods:\n",
+        "- Mirroring\n",
+        "- Random Cropping (identity, rotating, or sheering)\n",
+        "- Color Shifting (RGB) (scalar or PCA)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HSWXDeThQOkM",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Bias and Variance**\n",
+        "\n",
+        "How to reduce Bias:\n",
+        "- More training data\n",
+        "\n",
+        "How to reduce Variance:\n",
+        "- Deeper Network\n",
+        "- Regularization (dropout)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5x1CzBZcXB3U",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Problem with Deep Networks**\n",
+        "\n",
+        "1. Vanishing / Exploding Gradients\n",
+        "- as you backprop from the final layer to the first layer, multiplying by the weight matrix on each step can cause the gradient to decrease / increase exponentially quickly \n",
+        "- addressed using Batch Normalization or using Skip Connections\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lILPZx0i4SoZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Object Localization**\n",
+        "\n",
+        "Most Image Classification Tasks require Classification with Localization (or Detection for multiple objects)\n",
+        "\n",
+        "In general for localization tasks, the final layer will output the classes + the points of the bounding box (of the object)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uECOUE6W6Cd9",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Defining the target label y**\n",
+        "\n",
+        "For a multi-class object detetection problem, the y label may look like:\n",
+        "\n",
+        "y = [pc, bx, by, bh, bw, c1, c2, c3]\n",
+        "\n",
+        "Where\n",
+        "- pc: is there any object?\n",
+        "- bx: coordinates of the object\n",
+        "- by: coordinates of the object\n",
+        "- bh: coordinates of the object\n",
+        "- bw: coordinates of the object\n",
+        "- c1: is it class 1?\n",
+        "- c2: is it class 2?\n",
+        "- c3: is it class 3?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b_QbGh2b7bWa",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Landmark Detection**\n",
+        "\n",
+        "Landmarks are objects you want defined with an image (e.g. for a face recognition task, a landmark may be eyes, mouth, nose, etc - and you may want to point out multiple points along each object)\n",
+        "\n",
+        "Each x-y coordinate on the landmark becomes a labeled point\n",
+        "\n",
+        "E.g. if you have 64 landmark points, then you have 64x2 points + 1 indicator point = 129 labels\n",
+        "\n",
+        "*Used widely in AR (e.g. Snapchat Filters)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Uuwg7Dfi8n_5",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Sliding Windows Detection**\n",
+        "\n",
+        "If you have cropped images of your object, you can use a sliding window to iterate through every position in the image to find the object\n",
+        "\n",
+        "You might use different window sizes and iterate through the image multiple times\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DI1dOBON9olJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Dense Layers as Convolution Layers**\n",
+        "\n",
+        "A Dense (or Fully Connected) layer can be converted into a Convolution Layer by the following:\n",
+        "\n",
+        "Example\n",
+        "- Previous Layer: [5 x 5 x 16] tensor\n",
+        "- You want to replace a Dense Layer w/ 400 Nodes\n",
+        "- Replace with a [5 x 5] kernel with f = 400\n",
+        "- Output is a [1 x 1 x 400]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B8UcuPh6_HC6",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **YOLO (You only look once) (2015)**\n",
+        "\n",
+        "Key Feature:\n",
+        "- Only need to iterate through the image once to find the object\n",
+        "\n",
+        "**Labels for training**\n",
+        "\n",
+        "For each grid cell (sliding windows):\n",
+        "- y = [pc, bx, by, bh, bw, c1, c2, c3]\n",
+        "- if you have 3x3 grid cells: target output is [3 x 3 x 8]\n",
+        "\n",
+        "\n",
+        "**Specifying the position**\n",
+        "\n",
+        "for each grid cell: top left is (0,0) and bot right is (1,1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6GpLrZirBcZ7",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Intersection over Union**\n",
+        "\n",
+        "Sliding windows may not always perfectly encapsulate an object (i.e localize it)\n",
+        "\n",
+        "The Intersection of Union calculates the [size of intersection] / [size of union of window and object]\n",
+        "\n",
+        "Typically, if IoU >= 0.5, then deem as \"correct\" (can be some other threshold)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TkPuMNHFCp--",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Non-max suppression**\n",
+        "\n",
+        "When an object spans multiple windows, multiple bounding boxes may be detected. Simply find the one with the highest overlap, and remove the rest\n",
+        "\n",
+        "In Code:\n",
+        "- For each output prediction: Discard all boxes with pc <= 0.6\n",
+        "- While there are any remaining boxes:\n",
+        "  - Pick the box with the largest pc, output as prediction\n",
+        "  - Discard any remaining box with IoU >= 0.5 with the box output in the previous step"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jSsDLwoDDlJI",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Anchor Boxes**\n",
+        "\n",
+        "When you have overlapping objects with the same (or similar) mid point, non-max suppression may remove one of the valid objects.\n",
+        "\n",
+        "How to use Anchor Boxes:\n",
+        "- when you have 2 overlapping objects:\n",
+        "- a sample y is concatenated with the 2 objects\n",
+        "  - e.g. y = [pc, bx, by, bh, bw, c1, c2, c3, pc, bx, by, bh, bw, c1, c2, c3]\n",
+        "  - output may look like [3 x 3 x 16]\n"
       ]
     }
   ]
