--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -705,7 +705,63 @@
         "colab_type": "text"
       },
       "source": [
-        "## Recurrent Neural Networks"
+        "## **Recurrent Neural Networks**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qD6WKlswoCtP",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Types of Sequence Data**\n",
+        "\n",
+        "- Speech recognition\n",
+        "- Music generation\n",
+        "- Sentiment Classification\n",
+        "- DNA sequence analysis\n",
+        "- Machine translation\n",
+        "- Video activitry recognition\n",
+        "- Name entity recognition"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hNHeKy5vpUzO",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Why Standard Networks don't work**\n",
+        "\n",
+        "If input were one-hot-encoded word vectors:\n",
+        "\n",
+        "- Inputs, Outputs can be different lengths in different examples\n",
+        "- Doesn't share features learned across different positions of text"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ynGO9Y0zqN2E",
+        "colab_type": "text"
+      },
+      "source": [
+        "**(Unidirectional) RNN**\n",
+        "\n",
+        "Steps:\n",
+        "\n",
+        "- $a^{<0>} = 0$\n",
+        "- $\\hat{a}^{<1>} = g_1(w_{aa}a^{<0>} + w_{ax}x^{<1>}+b_a) $  <- tanh/ReLu\n",
+        "- $\\hat{y}^{<1>} = g_1(w_{ya}a^{<1>} + b_y) $ <- sigmoid\n",
+        "- $\\hat{a}^{<t>} = g_1(w_{aa}a^{<t-1>} + w_{ax}x^{<t>}+b_a) $  \n",
+        "- $\\hat{y}^{<t>} = g_1(w_{ya}a^{<t>} + b_y) $ \n",
+        "\n",
+        "Written otherwise:\n",
+        "\n",
+        "- $\\hat{a}^{<t>} = g(w_{a}[a^{<t-1>}, x^{<t>}]+b_a) $\n",
+        "  - Stack $w_{aa}$ and $w_{ax}$ , compress into one\n"
       ]
     },
     {
@@ -751,107 +807,6 @@
         "import tensorflow as tf\n",
         "tf.enable_eager_execution()\n",
         "print(\"Tensorflow version: \" + tf.__version__)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QHuOUZub27ny",
-        "colab_type": "code",
-        "cellView": "both",
-        "colab": {}
-      },
-      "source": [
-        "#@title Display utilities [RUN ME]\n",
-        "\n",
-        "from enum import IntEnum\n",
-        "import numpy as np\n",
-        "\n",
-        "class Waveforms(IntEnum):\n",
-        "    SINE1 = 0\n",
-        "    SINE2 = 1\n",
-        "    SINE3 = 2\n",
-        "    SINE4 = 3\n",
-        "\n",
-        "def create_time_series(waveform, datalen):\n",
-        "    # Generates a sequence of length datalen\n",
-        "    # There are three available waveforms in the Waveforms enum\n",
-        "    # good waveforms\n",
-        "    frequencies = [(0.2, 0.15), (0.35, 0.3), (0.6, 0.55), (0.4, 0.25)]\n",
-        "    freq1, freq2 = frequencies[waveform]\n",
-        "    noise = [np.random.random()*0.2 for i in range(datalen)]\n",
-        "    x1 = np.sin(np.arange(0,datalen) * freq1)  + noise\n",
-        "    x2 = np.sin(np.arange(0,datalen) * freq2)  + noise\n",
-        "    x = x1 + x2\n",
-        "    return x.astype(np.float32)\n",
-        "\n",
-        "from matplotlib import transforms as plttrans\n",
-        "\n",
-        "plt.rcParams['figure.figsize']=(16.8,6.0)\n",
-        "plt.rcParams['axes.grid']=True\n",
-        "plt.rcParams['axes.linewidth']=0\n",
-        "plt.rcParams['grid.color']='#DDDDDD'\n",
-        "plt.rcParams['axes.facecolor']='white'\n",
-        "plt.rcParams['xtick.major.size']=0\n",
-        "plt.rcParams['ytick.major.size']=0\n",
-        "\n",
-        "def picture_this_1(data, datalen):\n",
-        "    plt.subplot(211)\n",
-        "    plt.plot(data[datalen-512:datalen+512])\n",
-        "    plt.axvspan(0, 512, color='black', alpha=0.06)\n",
-        "    plt.axvspan(512, 1024, color='grey', alpha=0.04)\n",
-        "    plt.subplot(212)\n",
-        "    plt.plot(data[3*datalen-512:3*datalen+512])\n",
-        "    plt.axvspan(0, 512, color='grey', alpha=0.04)\n",
-        "    plt.axvspan(512, 1024, color='black', alpha=0.06)\n",
-        "    plt.show()\n",
-        "    \n",
-        "def picture_this_2(data, batchsize, seqlen):\n",
-        "    samples = np.reshape(data, [-1, batchsize, seqlen])\n",
-        "    rndsample = samples[np.random.choice(samples.shape[0], 8, replace=False)]\n",
-        "    print(\"Tensor shape of a batch of training sequences: \" + str(rndsample[0].shape))\n",
-        "    print(\"Random excerpt:\")\n",
-        "    subplot = 241\n",
-        "    for i in range(8):\n",
-        "        plt.subplot(subplot)\n",
-        "        plt.plot(rndsample[i, 0]) # first sequence in random batch\n",
-        "        subplot += 1\n",
-        "    plt.show()\n",
-        "    \n",
-        "def picture_this_3(predictions, evaldata, evallabels, seqlen):\n",
-        "    subplot = 241\n",
-        "    colors = plt.rcParams['axes.prop_cycle'].by_key()['color']\n",
-        "    for i in range(8):\n",
-        "        plt.subplot(subplot)\n",
-        "        #k = int(np.random.rand() * evaldata.shape[0])\n",
-        "        l0, = plt.plot(evaldata[i, 1:], label=\"data\")\n",
-        "        plt.plot([seqlen-2, seqlen-1], evallabels[i, -2:])\n",
-        "        l1, = plt.plot([seqlen-1], [predictions[i]], \"o\", color=\"red\", label='Predicted')\n",
-        "        l2, = plt.plot([seqlen-1], [evallabels[i][-1]], \"o\", color=colors[1], label='Ground Truth')\n",
-        "        if i==0:\n",
-        "            plt.legend(handles=[l0, l1, l2])\n",
-        "        subplot += 1\n",
-        "    plt.show()\n",
-        "    \n",
-        "def picture_this_hist(rmse1, rmse2, rmse3, rmse):\n",
-        "  colors = ['#4285f4', '#34a853', '#fbbc05', '#ea4334']\n",
-        "  plt.figure(figsize=(5,4))\n",
-        "  plt.xticks(rotation='40')\n",
-        "  plt.title('RMSE: your model vs. simplistic approaches')\n",
-        "  plt.bar(['RND', 'LAST', 'LAST2', 'Yours'], [rmse1, rmse2, rmse3, rmse], color=colors)\n",
-        "  plt.show()\n",
-        "\n",
-        "def picture_this_hist_all(rmse1, rmse2, rmse3, rmse4, rmse5, rmse6, rmse7, rmse8):\n",
-        "  colors = ['#4285f4', '#34a853', '#fbbc05', '#ea4334', '#4285f4', '#34a853', '#fbbc05', '#ea4334']\n",
-        "  plt.figure(figsize=(7,4))\n",
-        "  plt.xticks(rotation='40')\n",
-        "  plt.ylim(0, 0.35)\n",
-        "  plt.title('RMSE: all models')\n",
-        "  plt.bar(['RND', 'LAST', 'LAST2', 'LINEAR', 'DNN', 'CNN', 'RNN', 'RNN_N'],\n",
-        "          [rmse1, rmse2, rmse3, rmse4, rmse5, rmse6, rmse7, rmse8], color=colors)\n",
-        "  plt.show()"
       ],
       "execution_count": null,
       "outputs": []
@@ -1682,6 +1637,161 @@
         "- a sample y is concatenated with the 2 objects\n",
         "  - e.g. y = [pc, bx, by, bh, bw, c1, c2, c3, pc, bx, by, bh, bw, c1, c2, c3]\n",
         "  - output may look like [3 x 3 x 16]\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vKJrAOkluY2k",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Face Recognition**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D9WfuV6Vuw3o",
+        "colab_type": "text"
+      },
+      "source": [
+        "Two kinds of task:\n",
+        "\n",
+        "**Face Verification**\n",
+        "- Input: Image, Name ID\n",
+        "- Output: whether or not the imput image is that of the claimed person\n",
+        "- 1:1 task (easy)\n",
+        "\n",
+        "**Face Recognition**\n",
+        "- Has a database of K persons\n",
+        "- Input: image\n",
+        "- Output: ID if the image is any of the K persons (or \"not recognized\")\n",
+        "- 1:K task (difficult)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jvmBHhzrvTte",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **One Shot Learning**\n",
+        "\n",
+        "Learning from one example to recognize the person again (typically you only have 1 training sample)\n",
+        "\n",
+        "Also - every time you want to add a new face, if using a DL, you need to add one more node to the softmax layer (retraining every time does not work well)\n",
+        "\n",
+        "Instead -> learn a \"similarity\" function -> d(img1, img2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w7Y_dvalwQnJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Siamese Network (2014)**\n",
+        "\n",
+        "- Input: Image\n",
+        "- Use sequence of Conv, Pooling, and FC Layers\n",
+        "- Obtain the encoding (embedding vector) (f(x(1))\n",
+        "- $ d(x^{(1)}, x^{(2)}) = || f(x(^{1)}) - f(x^{(2)}) ||^2 $\n",
+        "- Learning parameters such that:\n",
+        "  - if x(i) and x(i) are the same person, || f(x(1)) - f(x(2)) ||2 is small\n",
+        "  - if x(i) and x(i) are diffferent people, || f(x(1)) - f(x(2)) ||2 is large\n",
+        "- We can do this using the Triplet Loss (Anchor, Positive, Negative)\n",
+        "- $$ L(A, P, N) = max(||f(A) - f(P)||^2 - ||f(A) - f(N)||^2 + \\alpha (margin), 0) $$\n",
+        "- Note: Choose triplets that are \"hard\" to train\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7aGaVqe8yWIQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Face Verification and Binary Classification**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LOwzSSz_ybKL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Face Verification problem can be treated as a Binary Classification problem (1:1 mapping)\n",
+        "\n",
+        "Input: 2 images"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bSzBsodey4Vh",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Neural Style Transfer**\n",
+        "\n",
+        "Input: Content C, Style S\n",
+        "\n",
+        "Output: Generated Image G (Content C in Style S)\n",
+        "\n",
+        "Cost Function\n",
+        "$$ J(G) = \\alpha  J_{content}(C, G) + \\beta  J_{style}(S, G)$$\n",
+        "\n",
+        "\n",
+        "Steps:\n",
+        "1. Initiage G randomly (white noise)\n",
+        "  - G: 100 x 100 x 3 (RGB)\n",
+        "2. Use gradient descent to minimize J(G)\n",
+        "  - $ G := G - \\frac{d}{dg} J(G)$\n",
+        "\n",
+        "**Content Cost Function**\n",
+        "\n",
+        "- Say you use hidden layer l to compute content cost\n",
+        "- Use pre-trained ConvNet (e.g. VGG network)\n",
+        "- Let a\\[l](C) and a\\[l](G) be the activation of layer l on the images\n",
+        "- If  a\\[l](C) and a\\[l](G) are similar, both images have similar content\n",
+        "\n",
+        "$$ J_{content}(C, G) = \\frac{1}{2} ||a^{[l](C)} - a^{[l](G)}||^2 $$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cJNTOO5C2wR3",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Style Cost Function**\n",
+        "\n",
+        "- Say you are using layer l's activation to measure \"style\"\n",
+        "- Define style as **correlation** between activations across channels\n",
+        "- Let a_(i,j,k)[l] = activation at (i=H,j=W,k=C). G[l] is n_c[l] x n_c[l]\n",
+        "\n",
+        "\n",
+        "\n",
+        "$$ J_{style}^{[l]}(S,G) = \\frac{1}{(2n_H^{[l]}n_W^{[l]}n_C^{[l]})^2}\\Sigma_k \\Sigma_{k'}(G_{kk'}^{[l](S)} - G_{kk'}^{[l](G)})  $$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_gqTKN-O5o09",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Conv 3D**\n",
+        "\n",
+        "- In 3D, you will have height, width and depth (e.g. 14 x 14 x 14)\n",
+        "- Filters are also 3D (5 x 5 x 5)\n",
+        "(14 x 14 x 14 x 1) x (5 x 5 x 5 x 1) x 16 filters = 10 x 10 x 10 x 16\n"
       ]
     }
   ]
