--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -476,6 +476,70 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "5yujHbDEMibn",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Tree-Based Models"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9H0rh5cgMj9N",
+        "colab_type": "text"
+      },
+      "source": [
+        "- Classification tree analysis is when the predicted outcome is the class (discrete) to which the data belongs.\n",
+        "- Regression tree analysis is when the predicted outcome can be considered a real number (e.g. the price of a house, or a patient's length of stay in a hospital).\n",
+        "- Boosted trees Incrementally building an ensemble by training each new instance to emphasize the training instances previously mis-modeled. A typical example is AdaBoost. These can be used for regression-type and classification-type problems.[7][8]\n",
+        "- Bootstrap aggregated (or bagged) decision trees, an early ensemble method, builds multiple decision trees by repeatedly resampling training data with replacement, and voting the trees for a consensus prediction.[9]\n",
+        "  - A random forest classifier is a specific type of bootstrap aggregating\n",
+        "- Rotation forest – in which every decision tree is trained by first applying principal component analysis (PCA) on a random subset of the input features.[10]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P6xEOsP9KsvF",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Feature Importance"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fu-zSYa2KydM",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "**Information Gain**\n",
+        "\n",
+        "Synonym for **Kullback-Leibler diverence** (also called relative entropyt), Information Gain is the amount of information gained about a random variable or signal from observing another random variable.\n",
+        "\n",
+        "The information gain of a random variable X obtained from an observation of a random variable A taking value A = a is defined:\n",
+        "\n",
+        "$ {\\displaystyle IG_{X,A}{(X,a)}=D_{\\text{KL}}{\\left(P_{X}{(x|a)}\\|P_{X}{(x|I)}\\right)},} $\n",
+        "\n",
+        "the Kullback-Leibler diverence of the prior distribution $P_X(x|I) $ for x from the posterior distribution $ P_{x|A}(X|a) $ for x given a\n",
+        "\n",
+        "\n",
+        "In general terms, the expected information gain is the **change in information entropy H** as:\n",
+        "\n",
+        "$ IG(T, a) = H(T) - H(T|a) $\n",
+        "\n",
+        "where $ H(T|a) $ is the conditional entropy of T given the value of attribute a\n",
+        "\n",
+        "\n",
+        "$ H(T) - I_E(p_1, p_2, .., p_J) = -\\Sigma^J_{i=1}p_i log_2 p_i $ \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "3Hpjbd9YS6Mc",
         "colab_type": "text"
       },
@@ -748,7 +812,11 @@
         "colab_type": "text"
       },
       "source": [
-        "**(Unidirectional) RNN**\n",
+        "### **(Unidirectional) RNN**\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "\n",
         "Steps:\n",
         "\n",
@@ -762,6 +830,78 @@
         "\n",
         "- $\\hat{a}^{<t>} = g(w_{a}[a^{<t-1>}, x^{<t>}]+b_a) $\n",
         "  - Stack $w_{aa}$ and $w_{ax}$ , compress into one\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sMWlZ-d9TmRE",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Bidirectional RNN**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XGuqkRr_Tpc9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Bidirectional RNN has a similar structure as the Unidirectional RNN, but with an additional activation at each iteration in reverse"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KbUXiECsnyb3",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **BERT**\n",
+        "\n",
+        "Called Bidirectional Encoder Representation - applies the bidrectional training of Transformer, a popular attention model. (Technically it is non-directional since it looks at all words simultaneously"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U1k5iXSRoA8J",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Masked LM (MLM)**\n",
+        "\n",
+        "Before feeding word sequences into BERT (tokenized and encoded), 15% of words in each sequence are replaced with a [MASK] token. The model then attemps to predict the original value of the masked words, basde on the context provided by other non-masked words in the sequence\n",
+        "\n",
+        "The prediction of the output words requires:\n",
+        "1. adding a classification layer on top of the encoder output\n",
+        "2. Multiplying the output vectors by the embedding matrix, transforming them into the vocabulaty dimension\n",
+        "3. Calculating the probability of each word in the vocabulary with softmax\n",
+        "\n",
+        "The BERT loss function takes into consideration only the prediction of the masked values and ignores the prediction of the non-masked words.\n",
+        "\n",
+        "As a consequence, the model coverages slower than directional models, a characteristic which is offest by its increased context awareness\n",
+        "\n",
+        "**Next Sentence Prediction (NSP)**\n",
+        "\n",
+        "In the BERT training process, the model receives pairs of sentences as input and learns to predict if the second sentencei n the pair is the subsequent sentence in the original document. During training, 50% of the inputs are a pair in which the second sentence is ther subsequent sentence in the original document, while in the other 50% a random sentence from the corpus is chosen as the second sentence. The assumption is that the random sentence will be disconnected from the first sentence.\n",
+        "\n",
+        "How input is processed before entering the model:\n",
+        "1. A [CLS] token is inserted at the beginning of the first sentenfce and a [SEP] token is inserted at the end of each sentence\n",
+        "2. A sentence embedding indicating Sentence A or Sentence B is added to each token. Sentence embeddings are similar in concept to token embeddings with a vocabulary of 2\n",
+        "3. A positional embedding is added to each token to indicate its position in the sequence. The concept and implementation of positional embedding are presented in the Transformer paper"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_j3eyx_jnwmD",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
